fix: 修复一些问题
